syntax = "proto3";
import "user-defined-schema.proto";
import "shared.proto";

option java_package = "it.unibo.collektive.unity.data";
option csharp_namespace = "Collektive.Unity.Data";

message GlobalData {
  int32 seed = 1;
  CustomGlobalData customData = 2;
}